充电桩充电站页面

--- a/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
@@ -17,7 +17,7 @@
                             <select fm-edit-view class="fm-control" ng-model="poi.chargingStation[0].changeBrands"
                                     no_results_text="'--无--'" placeholder_text_single="'--请选择--'"
                                     ng-options="value as lable.chainName for (value, lable) in chainList"
-                                    chosen>
+                                    chosen multiple >
                             </select>
                         </div>
                     </li>
