--- a/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
@@ -15,6 +15,23 @@
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">在线检查</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-click="">批量作业</button>
 					<button type="button" class="btn btn-shape btn-ls" ng-if="workedFlag==2" ng-click="submitData();">提交数据</button>
+					<span uib-popover-template="customPopoverUrl" popover-is-open="popoverIsOpen" popover-trigger="outsideClick" popover-title="每次作业展开" popover-placement="bottom" ><i class="fa fa fa-asterisk fa-lg pointer wordColorWhite" ></i></span>
+					<script type="text/ng-template" id="myPopoverTemplate.html">
+						<div>
+							<div ng-repeat="item in costomWorkNumEum" style="line-height: 24px;">
+								<input type="radio" name="optionsRadios" ng-click="customAsign(1);" ng-checked="editorLines=='{{item}}'" value="option1" >{{item}}条/次
+							</div>
+							<div style="line-height: 24px;">
+								<input type="radio" name="optionsRadios" ng-click="customAsign(2);" >自定义
+								<div ng-show="customAsignOpen" class="input-group custom-popover">
+									<input type="text" class="form-control" ng-model="a.editorLines">
+									<span class="input-group-btn">
+										<button class="btn btn-default btn-ls" type="button" ng-click="customConfirm();">确定</button>
+									</span>
+								</div>
+							</div>
+						</div>
+					</script>
 				</div>
 				<div class="pull-right">
 					<input class="fm-search-control" type="text" ng-model="filters[searchType]" placeholder="搜索"/>
