--- a/scripts/components/column/tpls/chinaName/shortNameTpl.html
+++ b/scripts/components/column/tpls/chinaName/shortNameTpl.html
@@ -51,7 +51,7 @@
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
 		<div class="fm-panel">
 			<div class="title">
-				<span style="cursor: pointer">名称统一</span>
+				<span style="cursor: pointer">简称作业</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
 			</div>
 			<div>
