--- a/less/editor.less
+++ b/less/editor.less
@@ -1701,6 +1701,14 @@ form input[type=checkbox].ng-dirty:before {
   z-index:-1;
   display: none;
 }
+.modelWindow{
+  top:0px;
+  z-index:1;
+  height: 100%;
+  width:100%;
+  background-color:#aaaaaa;
+  opacity: 0.6
+}
 .tablePosition{
   height: 100%;
   position: absolute;
@@ -1725,6 +1733,17 @@ form input[type=checkbox].ng-dirty:before {
 }
 .wordColorWhite{
   color: white;
+}
+.lable-right{
+  text-align: right;
+  padding-right: 10px;
+}
+.edit-input{
+  border: 1px solid #ccc ;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  width: 90%;
 }
 //重新覆盖popover的样式
 .popover{
