--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1718,6 +1718,14 @@ form input[type=checkbox].ng-dirty:before {
   z-index: -1;
   display: none;
 }
+.modelWindow {
+  top: 0px;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: #aaaaaa;
+  opacity: 0.6;
+}
 .tablePosition {
   height: 100%;
   position: absolute;
@@ -1742,6 +1750,17 @@ form input[type=checkbox].ng-dirty:before {
 }
 .wordColorWhite {
   color: white;
+}
+.lable-right {
+  text-align: right;
+  padding-right: 10px;
+}
+.edit-input {
+  border: 1px solid #ccc ;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  width: 90%;
 }
 .popover .popover-content {
   padding: 9px 8px;
