照片录入英文名称录入保存逻辑

--- a/scripts/components/directives/loginForm/loginForm.htm
+++ b/scripts/components/directives/loginForm/loginForm.htm
@@ -31,7 +31,7 @@
     <!-- loginButton part -->
     <div class="form-group">
         <div class="col-sm-12">
-            <button ng-click="handleEvent()" ng-disabled="myForm.$invalid" class="btn btn-block" type="submit">登 录</button>
+            <button ng-click="handleEvent()" class="btn btn-block" type="submit">登 录</button>
         </div>
     </div>
     <!-- remember me -->
