--- a/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
+++ b/scripts/components/column/tpls/chinaAddress/addrSplitTpl.html
@@ -66,6 +66,8 @@
 				</table>
 			</div>
 		</div>
+		<!-- 高级搜索 -->
+
 	</div>
 	<!-- 表格编辑界面 -->
 	<div ng-class="{true:'testView',false:'testViewHiden'}[editPanelIsOpen]">
